--- a/css/style.css
+++ b/css/style.css
@@ -1,359 +1,442 @@
 /*IMPORT UTILITIES*/
 header nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center; }
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 header nav ul {
-    display: flex;
-    list-style: none; }
+  display: flex;
+  list-style: none;
+}
 header nav ul li a {
-    color: black;
-    text-align: none;
-    font-weight: bold;
-    text-decoration: none;
-    padding: .1875rem;
-    margin: 0 .7375rem;
-    transition: .5s; }
+  text-align: none;
+  color: black;
+  text-decoration: none;
+  font-weight: bold;
+  margin: 0 0.7375rem;
+  padding: 0.1875rem;
+  transition: 0.5s;
+}
+
 header .navbar .barranav {
-    background-color: rgba(40, 119, 119, 0.3);
-    position: fixed;
-    top: 0; }
+  background-color: rgba(40, 119, 119, 0.3);
+  position: fixed;
+  top: 0;
+}
 
 .navbar li a:hover {
-    color: #1CB698; }
+  color: #1CB698;
+}
 
 .logo img {
-    width: 6rem;
-    border-radius: 16.375rem; }
+  width: 6rem;
+  border-radius: 16.375rem;
+}
 
 /*seccion inicio*/
 .contenedor-inicio {
-    background-color: #E8FFF3; }
+  background-color: #E8FFF3;
+}
 
 .galeriaFotos {
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly; }
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+}
 
 .galeriaFotos img {
-    width: 20%; }
+  width: 20%;
+}
 
 .galeriaFotos img {
-    gap: .3125rem;
-    overflow: hidden;
-    border-radius: .3125rem;
-    box-shadow: .3125rem .5rem .75rem #E8E884;
-    transition: 0.5s;
-    object-fit: cover; }
+  gap: 0.3125rem;
+  overflow: hidden;
+  border-radius: 0.3125rem;
+  box-shadow: 0.3125rem 0.5rem 0.75rem #E8E884;
+  transition: 0.5s;
+  object-fit: cover;
+}
 
 .galeriaFotos img:hover {
-    transform: scale(1.2); }
+  transform: scale(1.2);
+}
 
 .contenedor-inicio .tituloppal, .contenedor-inicio h2 {
-    color: #2F4858;
-    font-size: 2.75rem;
-    text-align: center;
-    justify-content: center;
-    margin-top: 8rem;
-    margin-bottom: 1.25rem;
-    padding: 1.25rem 1.25rem;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    text-shadow: .125rem .125rem .3125rem  #183D3D; }
+  color: #2F4858;
+  font-size: 2.5rem;
+  text-align: center;
+  justify-content: center;
+  margin-top: 8rem;
+  margin-bottom: 1.25rem;
+  padding: 1.25rem 1.25rem;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  text-shadow: 0.125rem 0.125rem 0.3125rem #183D3D;
+}
 
 .contenedor-inicio h2 {
-    margin-top: 1.25rem;
-    margin-bottom: 1.25rem; }
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
+}
 
 /*SECTION PRODUCTOS*/
-.productos, .tramichitips, .mayoristas, .contacto {
-    color: #2F4858;
-    font-size: 2.75rem;
-    text-align: center;
-    padding-top: 8rem;
-    padding-bottom: 1.25rem;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    text-shadow: .125rem .125rem .3125rem  #183D3D;
-    height: auto;
-    width: 100%; }
+.productos, .contacto, .mayoristas, .tramichitips {
+  color: #2F4858;
+  font-size: 2.5rem;
+  text-align: center;
+  padding-top: 8rem;
+  padding-bottom: 1.25rem;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  text-shadow: 0.125rem 0.125rem 0.3125rem #183D3D;
+  height: auto;
+  width: 100%;
+}
 
 .contenedorProductos {
-    width: 100%;
-    display: grid;
-    column-gap: 1.5125rem;
-    row-gap: 3.5rem;
-    padding-top: 1.25rem;
-    padding-bottom: 2.25rem; }
+  width: 100%;
+  display: grid;
+  column-gap: 1.5125rem;
+  row-gap: 3.5rem;
+  padding-top: 1.25rem;
+  padding-bottom: 2.25rem;
+}
 
 .contenedorProductos .galeriaProductos {
-    row-gap: 2.5rem; }
+  row-gap: 2.5rem;
+}
 
 .contenedorProductos .row .cards:hover {
-    background-color: #CDFBE4;
-    transition: 1s; }
+  background-color: #CDFBE4;
+  transition: 1s;
+}
 
 .imgProductos {
-    width: 19.5rem;
-    border-radius: .625rem; }
+  width: 19.5rem;
+  border-radius: 0.625rem;
+}
 .imgProductos img {
-    width: 100%;
-    object-fit: cover; }
+  width: 100%;
+  object-fit: cover;
+}
 
 .contenedorProductos .cards .precio {
-    color: #4BE225;
-    font-size: 1.75rem;
-    font-style: normal;
-    font-weight: bold; }
+  color: #4BE225;
+  font-size: 1.55rem;
+  font-style: normal;
+  font-weight: bold;
+}
 .contenedorProductos .cards .precio p {
-    font-family: sans-serif;
-    color: black;
-    font-style: normal;
-    font-weight: bold; }
+  font-family: sans-serif;
+  color: black;
+  font-style: normal;
+  font-weight: bold;
+}
 
 .contenedorProductos .precio:hover {
-    transform: scale(1.2); }
+  transform: scale(1.2);
+}
 
 /*SECTION TRAMICHITIPS*/
 .tramichitips {
-    display: flex;
-    justify-content: center;
-    height: auto;
-    width: 100%; }
+  display: flex;
+  justify-content: center;
+  height: auto;
+  width: 100%;
+}
 
 .tituloTips, .tituloTipsCurado {
-    color: #4BE225;
-    font-size: 2.1875rem;
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
-    text-shadow: .125rem .125rem .3125rem #4be225;
-    text-transform: capitalize; }
+  color: #4BE225;
+  font-size: 2rem;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  text-shadow: 0.125rem 0.125rem 0.3125rem #4be225;
+  text-transform: capitalize;
+}
 
 .tituloTipsCurado {
-    padding-top: 2rem; }
+  padding-top: 2rem;
+}
 
 .armadoMate ol, .curadoMate ol {
-    border-color: yellow;
-    text-align: center;
-    font-size: 1.5625rem;
-    font-weight: 300;
-    padding: 1.625rem;
-    align-items: center; }
+  border-color: yellow;
+  text-align: center;
+  font-size: 1.5625rem;
+  font-weight: 300;
+  padding: 1.625rem;
+  align-items: center;
+}
 .armadoMate ol li, .curadoMate ol li {
-    padding-top: 1.25rem; }
+  padding-top: 1.25rem;
+}
 
 .imgtramichitips, .videito {
-    width: 100%;
-    display: flex;
-    justify-content: center; }
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
 .imgtramichitips img, .videito img {
-    width: 50%;
-    overflow: hidden;
-    border-radius: .3125rem;
-    box-shadow: .3125rem .5rem .75rem #E8E884;
-    transition: 0.5s;
-    object-fit: cover; }
+  width: 50%;
+  overflow: hidden;
+  border-radius: 0.3125rem;
+  box-shadow: 0.3125rem 0.5rem 0.75rem #E8E884;
+  transition: 0.5s;
+  object-fit: cover;
+}
 
 .videito {
-    padding-bottom: 1.25rem; }
+  padding-bottom: 1.25rem;
+}
 
 /*SECCION MAYORISTAS*/
 .mayoristas {
-    width: 100%; }
+  width: 100%;
+}
 
 .infoMayorista {
-    background-color: white;
-    box-shadow: .3125rem .5rem .75rem #E8E884; }
+  background-color: white;
+  box-shadow: 0.3125rem 0.5rem 0.75rem #E8E884;
+}
 
 .infoMayorista:hover {
-    transform: scale(1.2); }
+  transform: scale(1.2);
+}
 
 .mapita {
-    padding-top: 1.25rem;
-    overflow: hidden;
-    justify-content: center; }
+  padding-top: 1.25rem;
+  overflow: hidden;
+  justify-content: center;
+}
 
 .tituloMayorista, .tituloContacto {
-    color: #4BE225;
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 2rem;
-    font-style: normal;
-    font-weight: bold;
-    line-height: normal;
-    font-size: 2rem; }
+  color: #4BE225;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.75rem;
+  font-style: normal;
+  font-weight: bold;
+  line-height: normal;
+  font-size: 1.75rem;
+}
 
 .flecha {
-    height: 10%;
-    width: 10%; }
+  height: 10%;
+  width: 10%;
+}
 .flecha img {
-    object-fit: cover; }
+  object-fit: cover;
+}
 
 .masInfo {
-    padding-top: 3rem;
-    padding-bottom: 3rem;
-    text-shadow: .125rem .125rem .3125rem #4be225; }
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  text-shadow: 0.125rem 0.125rem 0.3125rem #4be225;
+}
 
 .enviosMayorista {
-    background-color: #E8FFF3;
-    text-align: center;
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
-    padding: .9375rem;
-    text-shadow: .125rem .125rem .3125rem yellow; }
+  background-color: #E8FFF3;
+  text-align: center;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 0.9375rem;
+  text-shadow: 0.125rem 0.125rem 0.3125rem yellow;
+}
 .enviosMayorista .imgcamion {
-    padding-left: 1.25rem; }
+  padding-left: 1.25rem;
+}
 
 .enviosMayorista img {
-    width: 4.2520rem; }
+  width: 4.252rem;
+}
 
 .enviosMayorista {
-    animation-name: animacion;
-    animation-duration: 5s;
-    position: relative;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite; }
+  animation-name: animacion;
+  animation-duration: 5s;
+  position: relative;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
 
 @keyframes animacion {
-    0% {
-        background-color: #E8FFF3;
-        left: 0; }
-    50% {
-        background-color: #E8E884;
-        left: 18.75rem; }
-    100% {
-        background-color: #E8FFF3;
-        right: 0; } }
-
+  0% {
+    background-color: #E8FFF3;
+    left: 0;
+  }
+  50% {
+    background-color: #E8E884;
+    left: 18.75rem;
+  }
+  100% {
+    background-color: #E8FFF3;
+    right: 0;
+  }
+}
 /*SECCION CONTACTO*/
 .contacto {
-    width: 100%; }
+  width: 100%;
+}
 
 .seccionContacto {
-    background: #1e2326;
-    color: white;
-    font-family: Arial, Helvetica, sans-serif; }
+  background: #1e2326;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+}
 .seccionContacto h4 {
-    text-align: center;
-    color: white;
-    font-family: Arial, Helvetica, sans-serif; }
+  text-align: center;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
 .formularioContacto {
-    background: #1e2326;
-    display: flex;
-    justify-content: center;
-    padding-top: 2.5rem; }
+  background: #1e2326;
+  display: flex;
+  justify-content: center;
+  padding-top: 2.5rem;
+}
 
 .formularioContacto label {
-    display: flex;
-    justify-content: left; }
+  display: flex;
+  justify-content: left;
+}
 
 .formularioContacto input, .formularioContacto textarea {
-    text-align: left;
-    width: 100%;
-    padding: 1.125rem;
-    border: none;
-    margin-bottom: 1.25rem;
-    background-color: #1e2326;
-    color: #fff;
-    font-size: 1.125rem; }
+  text-align: left;
+  width: 100%;
+  padding: 1.125rem;
+  border: none;
+  margin-bottom: 1.25rem;
+  background-color: #1e2326;
+  color: #fff;
+  font-size: 1.125rem;
+}
 
 .tituloContacto {
-    color: white;
-    padding-top: .625rem;
-    padding-bottom: .625rem; }
+  color: white;
+  padding-top: 0.625rem;
+  padding-bottom: 0.625rem;
+}
 
 .seccionContacto .botonEnviar {
-    cursor: pointer;
-    border: .125rem solid #fff;
-    width: fit-content;
-    display: block;
-    margin: 1.25rem auto;
-    padding: .625rem 6.25rem;
-    font-size: 1rem;
-    color: #fff;
-    z-index: 10; }
+  cursor: pointer;
+  border: 0.125rem solid #fff;
+  width: fit-content;
+  display: block;
+  margin: 1.25rem auto;
+  padding: 0.625rem 6.25rem;
+  font-size: 1rem;
+  color: #fff;
+  z-index: 10;
+}
 
 .seccionContacto .botonEnviar:hover {
-    background-color: #1CB698;
-    transition: 1s; }
+  background-color: #1CB698;
+  transition: 1s;
+}
 
 footer {
-    width: 100%;
-    background-color: #CDFBE4;
-    padding: 2.25rem 1.25rem; }
+  width: 100%;
+  background-color: #CDFBE4;
+  padding: 2.25rem 1.25rem;
+}
 
 .parrafoFooter {
-    color: #208C64;
-    font-size: 1.875rem;
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center; }
+  color: #208C64;
+  font-size: 1.575rem;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+}
 
 .redes {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: .6125rem; }
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 0.6125rem;
+}
 
 .redes a img {
-    width: 1.25rem; }
+  width: 1.25rem;
+}
 
 @media (max-width: 1024px) {
-    header .navbar .barranav {
-        top: 0; }
-    .botonBuscar {
-        width: fit-content; }
-    .contenedorProductos .galeriaProductos {
-        column-gap: 1.5rem;
-        justify-content: center; } }
-
-@media (max-width: 425px) {
-    @keyframes animacion {
-        0% {
-            background-color: #E8FFF3;
-            left: 0; }
-        50% {
-            background-color: #E8E884;
-            left: 0; }
-        100% {
-            background-color: #E8FFF3;
-            right: 0; } }
-    .infoMayorista:hover {
-        transform: scale(1); } }
-
+  header .navbar .barranav {
+    top: 0;
+  }
+  .botonBuscar {
+    width: fit-content;
+  }
+  .contenedorProductos .galeriaProductos {
+    column-gap: 1.5rem;
+    justify-content: center;
+  }
+}
+@media (max-width: 768px) {
+  @keyframes animacion {
+    0% {
+      background-color: #E8FFF3;
+      left: 0;
+    }
+    50% {
+      background-color: #E8E884;
+      left: 0;
+    }
+    100% {
+      background-color: #E8FFF3;
+      right: 0;
+    }
+  }
+  .infoMayorista:hover {
+    transform: scale(1);
+  }
+  header .navbar .barranav {
+    background-color: rgba(40, 119, 119, 0.963);
+  }
+  footer {
+    background-color: rgba(40, 119, 119, 0.963);
+  }
+  .parrafoFooter {
+    color: white;
+  }
+}
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box; }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 .cards {
-    background-color: white;
-    text-align: center;
-    box-shadow: .3125rem .5rem .75rem #E8E884;
-    border-radius: .625rem;
-    overflow: hidden; }
+  background-color: white;
+  text-align: center;
+  box-shadow: 0.3125rem 0.5rem 0.75rem #E8E884;
+  border-radius: 0.625rem;
+  overflow: hidden;
+}
 
 /* boton de whatsapp*/
 .float {
-    position: fixed;
-    width: 3.75rem;
-    height: 3.75rem;
-    bottom: 2.5rem;
-    right: 2.5rem;
-    background-color: #25d366;
-    color: #FFF;
-    border-radius: 3.125rem;
-    text-align: center;
-    font-size: 1.875rem;
-    box-shadow: .125rem .125rem .1875rem #999;
-    z-index: 100; }
+  position: fixed;
+  width: 3.75rem;
+  height: 3.75rem;
+  bottom: 2.5rem;
+  right: 2.5rem;
+  background-color: #25d366;
+  color: #FFF;
+  border-radius: 3.125rem;
+  text-align: center;
+  font-size: 1.875rem;
+  box-shadow: 0.125rem 0.125rem 0.1875rem #999;
+  z-index: 100;
+}
 
 .float:hover {
-    text-decoration: none;
-    color: #25d366;
-    background-color: #fff; }
+  text-decoration: none;
+  color: #25d366;
+  background-color: #fff;
+}
 
 .my-float {
-    margin-top: 1rem; }
+  margin-top: 1rem;
+}
+
+/*# sourceMappingURL=style.css.map */
