--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -8,7 +8,7 @@ header {
             list-style: none;
             li a {
                 text-align: none;
-                color: map-get($colores,nav);
+                color: map-get($colores, contacto);
                 text-decoration: none;
                 font-weight: bold;
                 margin: 0 .7375rem;
