--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -1,4 +1,4 @@
-$BackgroundPrincipal : rgba(40,119,119, 0.30);
+$BackgroundPrincipal : rgba(40, 119, 119, 0.509);
 $BackgroundSecundario : #E8FFF3;
 $BorderCards : yellow;
 $BackgroundCard : white;
