--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -186,6 +186,7 @@
 
 .infoMayorista:hover{
     transform: scale(1.2);
+    transition: transform 2s;
 }
 
 .mapita {
@@ -222,19 +223,25 @@
     text-align: center;
     font-weight: bold ;
     font-family: Arial, Helvetica, sans-serif;
-    padding: .9375rem;
+    padding: 1rem;
     text-shadow: .125rem .125rem .3125rem yellow;
     .imgcamion {
         padding-left: 1.25rem;
     }
+    .envios {
+        padding-top: 1.25rem;
+    }
 }
 
 .enviosMayorista img {
-    width: 4.2520rem;
+    width: 4rem;
+    height: 4rem;
 }
+
+
 .enviosMayorista {
     animation-name: animacion;
-    animation-duration: 5s ;
+    animation-duration: 5s;
     position: relative;
     animation-timing-function: linear;  
     animation-iteration-count: infinite;
@@ -243,10 +250,27 @@
 
 @keyframes animacion {
     0% {background-color: $BackgroundSecundario; left: 0;}
-    50%{background-color: #E8E884; left: 18.75rem;}
+    50%{background-color: #E8E884; left: 0;}
     100% {background-color: $BackgroundSecundario; right: 0;}
 
 }
+
+.imgcamion {
+    animation-name: animacioncamion;
+    animation-duration: 3s;
+    position: relative;
+    animation-timing-function: linear;  
+    animation-iteration-count: infinite;
+}
+@keyframes animacioncamion {
+    0% {left: 0;}
+    50%{left: 2.7rem;}
+    100% {right: 0;}
+
+}
+
+
+
 
 /*SECCION CONTACTO*/
 
