modificando font-size

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,6 +12,7 @@
 @import"./layout/footer";
 @import"./layout/media/media1024";
 @import "./layout/media/media992";
+@import "./layout/media/media320";
 
 //*import base*/
 
