--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,7 @@ header .navbar .barranav {
 .contenedor-inicio h2 {
   margin-top: 1.25rem;
   margin-bottom: 1.25rem;
+  font-size: 2rem;
 }
 
 /*SECTION PRODUCTOS*/
@@ -433,6 +434,11 @@ footer {
   }
   .parrafoFooter {
     color: white;
+  }
+}
+@media (max-width: 320px) {
+  .masInfo {
+    font-size: 1.125rem;
   }
 }
 * {
