--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -4,7 +4,7 @@ footer {
     padding: 2.25rem 1.25rem;
 }
 .parrafoFooter {
-    color: map-get($colores, footers );
+    color: rgb(45, 57, 57);
     font-size: map-get($font-sizes, futer);
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
@@ -16,9 +16,17 @@ footer {
     flex-direction: row;
     justify-content: center;
     gap: .6125rem;
+    
 
 }
 
 .redes a img {
     width: 1.25rem;
+}
+.licencia {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
 }
